trying to address PATCH issue on GA